--- a/memories.html
+++ b/memories.html
@@ -7,6 +7,17 @@
   <link rel="stylesheet" href="memories.css" />
 </head>
 <body>
+
+  <!-- Floating Hearts -->
+  <div class="heart-background">
+    <div class="heart"></div>
+    <div class="heart"></div>
+    <div class="heart"></div>
+    <div class="heart"></div>
+    <div class="heart"></div>
+  </div>
+
+  <!-- Image Grid -->
   <div class="heart-container">
     <div class="row">
       <div class="block"><img src="1.jpg" alt=""></div>
@@ -82,3 +93,4 @@
   </script>
 </body>
 </html>
+
