--- a/wishes.html
+++ b/wishes.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div class="back-button">
-    <a href="index.html">← Back to Home</a>
+    <a href="home.html">← Back to Home</a>
   </div>
 
   <!-- Open Surprise Button -->
@@ -73,3 +73,4 @@ Nikku ❤️`;
   </script>
 </body>
 </html>
+
