--- a/memories.html
+++ b/memories.html
@@ -65,7 +65,7 @@
 
   <!-- Back Button -->
   <div class="back-button">
-    <a href="index.html">← Back to Home</a>
+    <a href="home.html">← Back to Home</a>
   </div>
 
   <!-- JS for popup -->
@@ -93,4 +93,5 @@
   </script>
 </body>
 </html>
+
 
