--- a/timeline.html
+++ b/timeline.html
@@ -237,7 +237,8 @@
     </div>
 </div>
 
-<a href="index.html" class="back-button">⬅ Back</a>
+<a href="home.html" class="back-button">⬅ Back</a>
 
 </body>
 </html>
+
