--- a/memories.html
+++ b/memories.html
@@ -8,15 +8,13 @@
 </head>
 <body>
 
-  <!-- Floating Hearts -->
-  <div class="heart-background">
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
+    <div class="floating-circles">
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
   </div>
-
+  
   <!-- Image Grid -->
   <div class="heart-container">
     <div class="row">
@@ -93,5 +91,6 @@
   </script>
 </body>
 </html>
+
 
 
