--- a/home.html
+++ b/home.html
@@ -128,6 +128,7 @@
     <a href="memories.html">💌 Memories</a>
     <a href="wishes.html">🎁 Wishes</a>
     <a href="timeline.html">📅 Our Love Timeline</a>
+    <a href="quiz.html">How much uk me 💖?</a>
   </div>
   <h1>Happy Anniversary Love 💖</h1>
 </div>
@@ -160,3 +161,4 @@
 </script>
 </body>
 </html>
+
